# rosahelikopter

./: .gitignore  CODEOWNERS  Makefile  Pipfile  README.md  fetch_from_github.py  filter_repos_missing_metadata_markdown_output.py  generate_markdown.py  pyproject.toml
common/: repo_criteria.py
rosahelikopter/: __init__.py  __main__.py  cli.py  github.py  main.py  markdown.py  string_templates.py
tests/: test_graphql.py  test_markdown_string.py
