[tool.poetry]
name = "rosahelikopter"
version = "1.0.0"
description = "Generate a filtered overview of Github repositories in orgs owned by specified team(s)."
authors = ["Christian Chavez <christian.chavez@nav.no>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
ipython = "^7.20.0"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
indent = '    '
honor_noqa = true
py_version = '38'
line_length = 120
color_output = true
combine_star = true
force_grid_wrap = 2
multi_line_output = 3
use_parentheses = true
lines_after_imports = 2
known_third_party = 'IPython'
default_section = 'THIRDPARTY'
include_trailing_comma = true
force_sort_within_sections = true
import_heading_stdlib = 'Python standard library imports'
import_heading_thirdparty = 'Non-standard library python package imports'
import_heading_firstparty = 'Imports of module(s) internal to this project/package'
