[tool.poetry]
name = "rosahelikopter"
version = "1.0.0"
description = "Generate a filtered overview of Github repositories in orgs owned by specified team(s)."
authors = ["Christian Chavez <christian.chavez@nav.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-graphql-client = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
ipython = "^7.20.0"
isort = "^5.7.0"
pytest-cov = "^2.11.1"
hypothesis = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_level = 'DEBUG'
python_files = [
    'tests.py',
    'test_*.py',
    '*_tests.py',
    'check_*.py',
    'example_*.py',
]
console_output_style = 'count'
testpaths = ['tests']
norecursedirs = [
    '.git',
    'htmlcov',
    '.*_cache',
    '*.egg-info',
    '.hypothesis',
    '__pycache__',
]
python_functions = [
    'test_*',
    'ensure_*',
    'integration_test_*',
]
# TODO: re-structure python code to match:
# addopts = '--cov=rosahelikopter'
# fails?
# continue_on_collection_errors = true

[tool.isort]
atomic = true
indent = '    '
honor_noqa = true
py_version = '38'
line_length = 120
color_output = true
combine_star = true
force_grid_wrap = 2
multi_line_output = 3
use_parentheses = true
lines_after_imports = 2
known_third_party = [
    'IPython',
]
default_section = 'THIRDPARTY'
include_trailing_comma = true
known_first_party = 'rosahelikopter'
force_sort_within_sections = true
import_heading_stdlib = 'Python standard library imports'
import_heading_thirdparty = 'Non-standard library python package imports'
import_heading_firstparty = 'Imports of module(s) internal to this project/package'
