[tool.poetry]
name = "rosahelikopter"
version = "0.0.0"   # Check git tags instead
description = "Generate a filtered overview of Github repositories in orgs owned by specified team(s)."
authors = ["Christian Chavez <christian.chavez@nav.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
gql = {version = "3.0.0a5", allow-prereleases = true, extras = ["requests"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
ipython = "^7.20.0"
isort = "^5.7.0"
pytest-cov = "^2.11.1"
hypothesis = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.path]
source = 'rosahelikopter/'

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    'pragma: no cover',

    # Don't complain about missing debug-only code:
    'def __repr__',

    # Don't complain if non-runnable code isn't run:
    'if 0:',
    'if False:',
    "if __name__ == '__main__':",
]
precision = 2
show_missing = true

[tool.pytest.ini_options]
python_files = [
    'tests.py',
    'test_*.py',
    '*_tests.py',
    'check_*.py',
    'example_*.py',
]
console_output_style = 'count'
testpaths = ['tests']
norecursedirs = [
    '.git',
    'htmlcov',
    '.*_cache',
    '*.egg-info',
    '.hypothesis',
    '__pycache__',
]
filterwarnings = [
    "ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.10 it will stop working:DeprecationWarning",
    'ignore:invalid escape sequence'
]
python_functions = [
    'test_*',
    'ensure_*',
    'integration_test_*',
]
addopts = [
    # Coverage options not covered by [tools.coverage.*] options
    '--cov-report=term-missing:skip-covered',
    '--cov-report=html',

    # Python module (read: as in `import` module) checked for coverage
    '--cov=rosahelikopter',

    # hypothesis options
    # "--hypothesis-show-statistics",   # Un-comment for testing/debugging purposes
    "--hypothesis-verbosity=normal",

    # pytest options that couldn't be configured above
    "--continue-on-collection-errors",
    "--verbosity=1",
]

[tool.isort]
atomic = true
indent = '    '
honor_noqa = true
py_version = '38'
line_length = 120
color_output = true
combine_star = true
force_grid_wrap = 2
multi_line_output = 3
use_parentheses = true
lines_after_imports = 2
known_third_party = [
    'IPython',
]
default_section = 'THIRDPARTY'
include_trailing_comma = true
known_first_party = 'rosahelikopter'
force_sort_within_sections = true
import_heading_stdlib = 'Python standard library imports'
import_heading_thirdparty = 'Non-standard library python package imports'
import_heading_firstparty = 'Imports of module(s) internal to this project/package'
